--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@types/serve-static": "^1.13.9",
     "@types/swagger-ui-express": "^4.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.6",
     "node": "^16.0.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-routes-express": "^3.3.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
+    "typeorm": "^0.2.32",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
