--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/serve-static": "^1.13.9",
     "@types/swagger-ui-express": "^4.1.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "node": "^16.0.0",
     "reflect-metadata": "^0.1.13",
