--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/bcrypt": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongodb": "^3.6.12",
+    "@types/redis": "^2.8.29",
     "@types/serve-static": "^1.13.9",
     "@types/swagger-ui-express": "^4.1.2",
     "bcrypt": "^5.0.1",
@@ -19,6 +20,7 @@
     "mongodb": "^3.6.6",
     "node": "^16.0.0",
     "reflect-metadata": "^0.1.13",
+    "swagger-model-validator": "^3.0.20",
     "swagger-routes-express": "^3.3.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
