--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@google-cloud/secret-manager": "^3.6.0",
     "@types/bcrypt": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/log4js": "^2.3.5",
     "@types/mongodb": "^3.6.12",
     "@types/redis": "^2.8.29",
     "@types/serve-static": "^1.13.9",
@@ -15,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "18.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
@@ -29,8 +31,17 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
+    "@types/eslint": "^7.2.13",
     "@types/express": "^4.17.11",
     "@types/swagger-ui-express": "^4.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
   },
