--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-airbnb": "18.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.3.0",
     "mongodb": "^3.6.6",
     "node": "^16.0.0",
     "reflect-metadata": "^0.1.13",
